--- a/app/src/main/res/layout/activity_barcode_screen.xml
+++ b/app/src/main/res/layout/activity_barcode_screen.xml
@@ -36,24 +36,45 @@
                 android:layout_height="match_parent"
                 android:layout_below="@id/toolbar">
 
-                <AutoCompleteTextView
-                    android:id="@+id/roomEditText"
-                    android:layout_width="331dp"
-                    android:layout_height="42dp"
+                <!-- Updated Layout for Room and Change Room Button -->
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
-                    android:background="@null"
-                    android:ems="10"
-                    android:hint="Enter Room Number"
-                    android:inputType="text"
-                    android:textColor="@color/white"
-                    android:textColorHint="@color/white"
-                    android:textColorLink="@color/white"
-                    android:textSize="20dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.562"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintEnd_toEndOf="parent">
 
+                    <AutoCompleteTextView
+                        android:id="@+id/roomEditText"
+                        android:layout_width="0dp"
+                        android:layout_height="42dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="8dp"
+                        android:background="@null"
+                        android:hint="Enter Room Number"
+                        android:inputType="text"
+                        android:textColor="@color/white"
+                        android:textColorHint="@color/white"
+                        android:textSize="20dp"
+                        app:layout_constraintEnd_toStartOf="@id/changeRoomButton"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent" />
+
+                    <Button
+                        android:id="@+id/changeRoomButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="16dp"
+                        android:backgroundTint="@color/orange"
+                        android:text="Change Room"
+                        android:visibility="gone"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/roomEditText"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <ImageView
                     android:id="@+id/imageView13"
@@ -91,7 +112,6 @@
                     android:hint="Enter Bag Tag"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
-                    android:textColorLink="@color/white"
                     android:textSize="20dp"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView14"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -123,7 +143,6 @@
                     android:layout_marginEnd="20dp"
                     android:background="@color/white"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/imageView14" />
 
@@ -159,22 +178,12 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="11dp"
                     android:text="Sync All"
+                    android:backgroundTint="@color/orange"
                     app:layout_constraintBottom_toTopOf="@+id/view01"
                     app:layout_constraintEnd_toStartOf="@+id/saveButton"
                     app:layout_constraintStart_toEndOf="@+id/textView"
                     app:layout_constraintTop_toBottomOf="@+id/imageView14"
                     tools:ignore="MissingConstraints" />
-
-                <!--                <Button-->
-                <!--                    android:id="@+id/roomButton"-->
-                <!--                    android:layout_width="wrap_content"-->
-                <!--                    android:layout_height="wrap_content"-->
-                <!--                    android:text="Room history"-->
-                <!--                    tools:ignore="MissingConstraints"-->
-                <!--                    tools:layout_editor_absoluteX="139dp"-->
-                <!--                    tools:layout_editor_absoluteY="8dp" />-->
-
-                <!-- Existing elements like AutoCompleteTextView, EditText, RecyclerView, etc. -->
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -190,3 +199,4 @@
         app:headerLayout="@layout/header" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
+
