--- a/app/src/main/res/drawable/rounded_delete_background.xml
+++ b/app/src/main/res/drawable/rounded_delete_background.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/deleteButtonBackground"/>
-    <corners android:radius="8dp"/> <!-- Adjust the radius to match the image -->
+    <corners
+        android:topLeftRadius="10dp"
+        android:bottomLeftRadius="10dp"
+        android:topRightRadius="10dp"
+        android:bottomRightRadius="10dp" />
 </shape>
