--- a/app/src/main/res/layout/activity_barcode_screen.xml
+++ b/app/src/main/res/layout/activity_barcode_screen.xml
@@ -171,7 +171,7 @@
                     app:layout_constraintVertical_bias="0.0"
                     android:paddingBottom="200dp"
                     android:layout_marginBottom="50dp"
-                    tools:ignore="MissingConstraints" />
+                    tools:ignore="MissingClass,MissingConstraints" />
 
                 <Button
                     android:id="@+id/syncAllButton"
