--- a/app/src/main/res/layout/tag_item.xml
+++ b/app/src/main/res/layout/tag_item.xml
@@ -1,8 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:layout_margin="4dp">
+    android:layout_height="80dp"
+    android:layout_margin="1dp">
 
     <!-- Main content of the card -->
     <androidx.cardview.widget.CardView
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_margin="4dp"
+            android:layout_margin="2dp"
             android:background="@color/white"
             android:orientation="horizontal"
             android:visibility="visible">
@@ -33,7 +33,7 @@
                 android:src="@drawable/baseline_luggage_24" />
 
             <LinearLayout
-                android:layout_width="200dp"
+                android:layout_width="148dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
@@ -44,7 +44,7 @@
                     android:layout_marginLeft="10dp"
                     android:gravity="center_vertical|start"
                     android:text="Bag Tag"
-                    android:textSize="20sp" />
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/tagTextView"
@@ -53,36 +53,49 @@
                     android:layout_marginLeft="10dp"
                     android:gravity="center_vertical|start"
                     android:text="Tag"
-                    android:textStyle="bold"
-                    android:textSize="20sp" />
+                    android:textSize="22sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="70dp"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="end|center_vertical"
+                android:paddingEnd="10dp">
 
                 <TextView
                     android:id="@+id/roomTextView"
-                    android:layout_width="137dp"
-                    android:gravity="center_vertical|start"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginLeft="10dp"
+                    android:gravity="end"
                     android:text="room no"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/dateTimeTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="4dp"
+                    android:gravity="end"
+                    android:text="DateTime"
+                    android:textColor="@android:color/darker_gray"
+                    android:textSize="14sp" />
+
             </LinearLayout>
+
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/dateTimeTextView"
-            android:layout_width="146dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="8dp"
-            android:text="DateTime"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="14sp" />
     </androidx.cardview.widget.CardView>
 
     <!-- Buttons that slide in on the right side of the card -->
     <LinearLayout
         android:id="@+id/hidden_buttons"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="end|center_vertical"
         android:layout_alignParentEnd="true"
@@ -92,61 +105,40 @@
 
         <!-- Sync Button with Background Color -->
         <LinearLayout
-            android:layout_width="101dp"
-            android:layout_height="87dp"
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:background="@drawable/rounded_sync_background"
-            android:gravity="center"
-            android:translationX="-3dp"
-            android:layout_marginEnd="-8dp">
+            android:gravity="center">
 
             <ImageView
                 android:id="@+id/syncButton"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:src="@drawable/baseline_sync_24"
                 android:padding="8dp"
-                android:scaleType="centerInside" />
-
-            <!-- Sync Text -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Sync"
-                android:textColor="@android:color/white"
-                android:textSize="12dp"
-                android:gravity="center" />
+                android:scaleType="fitXY" />
 
         </LinearLayout>
 
         <!-- Delete Button with Background Color -->
         <LinearLayout
-            android:layout_width="101dp"
-            android:layout_height="87dp"
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:background="@drawable/rounded_delete_background"
-            android:gravity="center"
-            android:translationX="-2dp"
-            android:layout_marginEnd="-5dp">
+            android:gravity="center">
 
             <ImageView
                 android:id="@+id/deleteButton"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:src="@drawable/baseline_delete_24"
                 android:padding="8dp"
-                android:scaleType="centerInside" />
-
-            <!-- Delete Text -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Delete"
-                android:textColor="@android:color/white"
-                android:textSize="12dp"
-                android:gravity="center" />
+                android:scaleType="fitXY" />
 
         </LinearLayout>
 
     </LinearLayout>
+
 </RelativeLayout>
