--- a/app/src/main/res/drawable/rounded_sync_background.xml
+++ b/app/src/main/res/drawable/rounded_sync_background.xml
@@ -3,7 +3,5 @@
     <solid android:color="@color/syncButtonBackground"/>
     <corners
         android:topLeftRadius="10dp"
-        android:bottomLeftRadius="10dp"
-        android:topRightRadius="10dp"
-        android:bottomRightRadius="10dp" />
+        android:bottomLeftRadius="10dp" />
 </shape>
