--- a/app/src/main/res/layout/tag_item.xml
+++ b/app/src/main/res/layout/tag_item.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="80dp"
-    android:layout_margin="4dp">
+    android:layout_margin="1dp">
 
     <!-- Main content of the card -->
     <androidx.cardview.widget.CardView
@@ -16,7 +16,7 @@
         <LinearLayout
             android:id="@+id/view_foreground"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_margin="4dp"
             android:background="@color/white"
@@ -32,10 +32,9 @@
                 android:scaleType="fitXY"
                 android:src="@drawable/baseline_luggage_24" />
 
-            <!-- Modified Layout for DateTime and RoomTextView to align right -->
             <LinearLayout
                 android:layout_width="148dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <TextView
@@ -57,11 +56,20 @@
                     android:textSize="22sp"
                     android:textStyle="bold" />
 
+                <!--                <TextView-->
+                <!--                    android:id="@+id/roomTextView"-->
+                <!--                    android:layout_width="137dp"-->
+                <!--                    android:gravity="center_vertical|start"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_marginTop="4dp"-->
+                <!--                    android:layout_marginLeft="10dp"-->
+                <!--                    android:text="room no"-->
+                <!--                    android:textSize="16dp" />-->
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="56dp"
                 android:layout_weight="1"
                 android:gravity="end|center_vertical"
                 android:orientation="vertical"
@@ -72,14 +80,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="end"
-                    android:text="Room No"
+                    android:text="room no"
                     android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/dateTimeTextView"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
+                    android:layout_height="32dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="4dp"
                     android:gravity="end"
                     android:text="DateTime"
                     android:textColor="@android:color/darker_gray"
@@ -87,7 +97,9 @@
 
             </LinearLayout>
 
+
         </LinearLayout>
+
 
     </androidx.cardview.widget.CardView>
 
@@ -104,13 +116,14 @@
 
         <!-- Sync Button with Background Color -->
         <LinearLayout
-            android:layout_width="101dp"
-            android:layout_height="87dp"
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:background="@drawable/rounded_sync_background"
             android:gravity="center"
-            android:translationX="-3dp"
-            android:layout_marginEnd="-8dp">
+            android:translationZ="12dp"
+            android:translationX="-2dp"
+            android:layout_marginEnd="0dp">
 
             <ImageView
                 android:id="@+id/syncButton"
@@ -126,20 +139,20 @@
                 android:layout_height="wrap_content"
                 android:text="Sync"
                 android:textColor="@android:color/white"
-                android:textSize="12dp"
+                android:textSize="12sp"
                 android:gravity="center" />
 
         </LinearLayout>
 
         <!-- Delete Button with Background Color -->
         <LinearLayout
-            android:layout_width="101dp"
-            android:layout_height="87dp"
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:background="@drawable/rounded_delete_background"
             android:gravity="center"
-            android:translationX="-2dp"
-            android:layout_marginEnd="-5dp">
+            android:translationX="-8dp"
+            android:layout_marginEnd="0dp">
 
             <ImageView
                 android:id="@+id/deleteButton"
@@ -155,7 +168,7 @@
                 android:layout_height="wrap_content"
                 android:text="Delete"
                 android:textColor="@android:color/white"
-                android:textSize="12dp"
+                android:textSize="12sp"
                 android:gravity="center" />
 
         </LinearLayout>
