--- a/app/src/main/res/layout/activity_barcode_screen.xml
+++ b/app/src/main/res/layout/activity_barcode_screen.xml
@@ -34,16 +34,15 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_below="@id/toolbar">
+                android:layout_below="@id/toolbar"
+                android:paddingTop="00dp">
 
                 <!-- Updated Layout for Room and Change Room Button -->
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraintLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent">
+                    android:layout_height="wrap_content">
+
 
                     <AutoCompleteTextView
                         android:id="@+id/roomEditText"
@@ -57,10 +56,10 @@
                         android:textColor="@color/white"
                         android:textColorHint="@color/white"
                         android:textSize="20dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@id/changeRoomButton"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent" />
+                        app:layout_constraintVertical_bias="0.0" />
 
                     <Button
                         android:id="@+id/changeRoomButton"
@@ -69,121 +68,117 @@
                         android:layout_marginEnd="16dp"
                         android:backgroundTint="@color/orange"
                         android:text="Change Room"
+                        android:textSize="20sp"
                         android:visibility="gone"
+                        app:cornerRadius="12dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/roomEditText"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent" />
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <ImageView
-                    android:id="@+id/imageView13"
-                    android:layout_width="340dp"
-                    android:layout_height="54dp"
-                    android:layout_marginTop="25dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.507"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/input_border"
-                    tools:ignore="MissingConstraints" />
+
+                <!--                <ImageButton-->
+                <!--                    android:id="@+id/saveButton"-->
+                <!--                    android:layout_width="52dp"-->
+                <!--                    android:layout_height="46dp"-->
+                <!--                    android:layout_marginTop="4dp"-->
+                <!--                    android:layout_marginEnd="28dp"-->
+                <!--                    android:layout_marginBottom="13dp"-->
+                <!--                    android:src="@drawable/baseline_save_24"-->
+                <!--                    app:layout_constraintBottom_toTopOf="@+id/view01"-->
+                <!--                    app:layout_constraintEnd_toEndOf="parent"-->
+                <!--                    app:layout_constraintTop_toBottomOf="@+id/imageView14"-->
+                <!--                    app:layout_constraintVertical_bias="0.0"-->
+                <!--                    tools:ignore="MissingConstraints" />-->
 
                 <ImageView
                     android:id="@+id/imageView14"
-                    android:layout_width="340dp"
-                    android:layout_height="54dp"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="32dp"
+                    android:layout_width="270dp"
+                    android:layout_height="48dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="4dp"
                     android:elevation="60dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.549"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView13"
+                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                     app:srcCompat="@drawable/input_border"
                     tools:ignore="MissingConstraints" />
 
-                <EditText
-                    android:id="@+id/tagEditText"
-                    android:layout_width="331dp"
-                    android:layout_height="42dp"
-                    android:layout_marginBottom="4dp"
-                    android:background="@null"
-                    android:hint="Enter Bag Tag"
-                    android:textColor="@color/white"
-                    android:textColorHint="@color/white"
-                    android:textSize="20dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView14"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.65"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:srcCompat="@drawable/white_input"
-                    tools:ignore="UnknownIdInLayout" />
-
-                <ImageButton
+                <Button
                     android:id="@+id/saveButton"
-                    android:layout_width="52dp"
-                    android:layout_height="46dp"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginEnd="28dp"
-                    android:layout_marginBottom="13dp"
-                    android:src="@drawable/baseline_save_24"
-                    app:layout_constraintBottom_toTopOf="@+id/view01"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:backgroundTint="@color/orange"
+                    android:text="Save"
+                    android:textSize="20sp"
+                    app:cornerRadius="12dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView14"
-                    app:layout_constraintVertical_bias="0.0"
+                    app:layout_constraintStart_toEndOf="@+id/imageView14"
+                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                     tools:ignore="MissingConstraints" />
 
                 <View
                     android:id="@+id/view01"
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="64dp"
-                    android:layout_marginEnd="20dp"
                     android:background="@color/white"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/imageView14" />
+                    tools:layout_editor_absoluteX="0dp"
+                    tools:layout_editor_absoluteY="135dp" />
 
                 <TextView
                     android:id="@+id/textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginBottom="12dp"
+                    android:layout_marginTop="14dp"
                     android:text="Bags In Room"
                     android:textColor="@color/white"
                     android:textSize="20sp"
-                    app:layout_constraintBottom_toTopOf="@id/view01"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView14" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/tagRecyclerView"
-                    android:layout_width="347dp"
-                    android:layout_height="333dp"
-                    android:layout_marginTop="4dp"
-                    android:padding="2dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_width="410dp"
+                    android:layout_height="439dp"
+                    android:layout_marginTop="8dp"
+                    android:paddingBottom="200dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/view01"
-                    app:layout_constraintVertical_bias="0.0"
+                    app:layout_constraintTop_toBottomOf="@+id/textView"
                     tools:ignore="MissingConstraints" />
 
                 <Button
                     android:id="@+id/syncAllButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="11dp"
-                    android:text="Sync All"
+                    android:layout_marginBottom="84dp"
                     android:backgroundTint="@color/orange"
-                    app:layout_constraintBottom_toTopOf="@+id/view01"
-                    app:layout_constraintEnd_toStartOf="@+id/saveButton"
-                    app:layout_constraintStart_toEndOf="@+id/textView"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView14"
+                    android:text="Sync All"
+                    android:textSize="20sp"
+                    app:cornerRadius="12dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     tools:ignore="MissingConstraints" />
+
+                <EditText
+                    android:id="@+id/tagEditText"
+                    android:layout_width="196dp"
+                    android:layout_height="38dp"
+                    android:layout_marginBottom="20dp"
+                    android:background="@null"
+                    android:hint="Enter Bag Tag"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:textSize="20dp"
+                    app:layout_constraintBottom_toTopOf="@+id/textView"
+                    app:layout_constraintEnd_toEndOf="@+id/imageView14"
+                    app:layout_constraintHorizontal_bias="0.148"
+                    app:layout_constraintStart_toStartOf="@+id/imageView14"
+                    app:srcCompat="@drawable/white_input"
+                    tools:ignore="UnknownIdInLayout" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -199,4 +194,3 @@
         app:headerLayout="@layout/header" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
-
