--- a/app/src/main/res/layout/activity_tag_list.xml
+++ b/app/src/main/res/layout/activity_tag_list.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -5,16 +6,18 @@
     android:background="@drawable/backgroundpic"
     android:padding="12dp">
 
-    <!-- Toolbar with back button -->
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/backtoolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:contentInsetStartWithNavigation="0dp"
-        android:navigationIcon="@drawable/baseline_arrow_back_ios_new_24"
-        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+<!--    &lt;!&ndash; Toolbar with back button &ndash;&gt;-->
+<!--    <androidx.appcompat.widget.Toolbar-->
+<!--        android:id="@+id/backtoolbar"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="?attr/actionBarSize"-->
+<!--        android:background="?attr/colorPrimary"-->
+<!--        android:contentInsetStartWithNavigation="0dp"-->
+<!--        android:navigationIcon="@drawable/baseline_arrow_back_ios_new_24"-->
+<!--        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
+<!--        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
+<!--        android:title="Room History"-->
+<!--        android:titleTextColor="@android:color/white"/>-->
 
     <!-- To display the room number -->
     <TextView
@@ -27,7 +30,7 @@
         android:textStyle="bold"
         android:layout_below="@id/backtoolbar"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="12dp" />
+        android:layout_marginTop="12dp"/>
 
     <!-- To add the divider view line -->
     <View
@@ -36,7 +39,7 @@
         android:layout_height="1dp"
         android:layout_below="@id/roomTextView"
         android:layout_marginTop="2dp"
-        android:background="@android:color/darker_gray" />
+        android:background="@android:color/darker_gray"/>
 
     <!-- To add a RecyclerView to display all the bagtags -->
     <androidx.recyclerview.widget.RecyclerView
@@ -44,6 +47,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/divider"
-        android:layout_marginTop="2dp" />
-
+        android:layout_marginTop="2dp"/>
 </RelativeLayout>
