--- a/app/src/main/res/layout/backtoolbar.xml
+++ b/app/src/main/res/layout/backtoolbar.xml
@@ -1,11 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/toolbar"
+    android:id="@+id/backtoolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@android:color/transparent"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+    android:background="?attr/colorPrimary"
+    android:contentInsetStartWithNavigation="0dp"
     android:navigationIcon="@drawable/baseline_arrow_back_ios_new_24"
-    android:contentInsetStartWithNavigation="0dp"/>
+    android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    android:title="Room History"
+    android:titleTextColor="@android:color/white"/>
+
