--- a/app/src/main/res/layout/room_item.xml
+++ b/app/src/main/res/layout/room_item.xml
@@ -3,7 +3,7 @@
 xmlns:app="http://schemas.android.com/apk/res-auto"
 app:cardUseCompatPadding="true"
 android:layout_width="match_parent"
-android:layout_height="110dp"
+android:layout_height="90dp"
 app:cardElevation="4dp"
 android:layout_margin="4dp"
 app:cardCornerRadius="8dp">
@@ -11,7 +11,7 @@ app:cardCornerRadius="8dp">
     <LinearLayout
         android:id="@+id/view_foreground"
         android:layout_width="match_parent"
-        android:layout_height="69dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_margin="4dp"
         android:background="@color/white"
@@ -25,7 +25,7 @@ app:cardCornerRadius="8dp">
             android:src="@drawable/baseline_meeting_room_24" />
 
         <LinearLayout
-            android:layout_width="153dp"
+            android:layout_width="146dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:orientation="vertical"
@@ -44,15 +44,15 @@ app:cardCornerRadius="8dp">
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="190dp"
             android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/tagCountTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="160dp"
+                android:layout_height="38dp"
                 android:layout_marginLeft="10dp"
-                android:gravity="center"
+                android:gravity="center_vertical"
                 android:text="Tag Count"
                 android:textSize="18sp" />
 
