--- a/app/src/main/res/layout/room_item.xml
+++ b/app/src/main/res/layout/room_item.xml
@@ -49,12 +49,12 @@ app:cardCornerRadius="8dp">
 
             <TextView
                 android:id="@+id/tagCountTextView"
-                android:layout_width="160dp"
-                android:layout_height="38dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
                 android:gravity="center_vertical"
-                android:text="Tag Count"
-                android:textSize="18sp" />
+                android:text="Unsynced Tag Count"
+                android:textSize="16sp" />
 
         </LinearLayout>
 
